--- a/#source/scss/slider.scss
+++ b/#source/scss/slider.scss
@@ -60,10 +60,12 @@
 		justify-content: center;
 		align-items: center;
 		background-color: #7f8c8c;
-		// position: absolute;
 		width: 100%;
-		// height: calc(100% - 130px);
+		// min-width: 0;
 		min-height: calc(100vh - 130px);
+		@media (max-width: $md4 + px) {
+			min-height: calc(100vh - 110px);
+		}
 		.slick-arrow {
 			font-size: 0;
 		}
@@ -144,6 +146,15 @@
 		padding: 6px 12px;
 		border-radius: 5px;
 		margin: 0px 0px 10px 0px;
+		@media (max-width: $md2 + px) {
+			font-size: 42px;
+		}
+		@media (max-width: 580px) {
+			font-size: 36px;
+		}
+		@media (max-width: $md4 + px) {
+			font-size: 32px;
+		}
 	}
 	&__subtitle {
 		display: inline-block;
@@ -155,11 +166,24 @@
 		line-height: 1.63;
 		background-color: #000;
 		padding: 15px 38px;
+		@media (max-width: $md2 + px) {
+			font-size: 14px;
+			max-width: 450px;
+		}
+		@media (max-width: 580px) {
+			padding: 10px 30px;
+			max-width: 400px;
+		}
+		@media (max-width: $md4 + px) {
+			padding: 10px 20px;
+			max-width: 250px;
+		}
 	}
 }
 //=======================================================================================================
 .home__clients-body {
 	position: relative;
+	min-width: 0;
 	.slick-arrow {
 		position: absolute;
 		top: -65px;
@@ -168,6 +192,14 @@
 		height: 37px;
 		border-bottom: 3px solid #7f8c8c;
 		border-radius: 5px;
+		@media (max-width: $md3 + px) {
+			top: -53px;
+		}
+		@media (max-width: $md4 + px) {
+			top: -43px;
+			width: 35px;
+			height: 35px;
+		}
 	}
 	.slick-arrow.slick-prev {
 		right: 59px;
@@ -179,6 +211,12 @@
 		&:hover {
 			background-color: #e6655e;
 			border-bottom: 3px solid #e2534b;
+		}
+		@media (max-width: $md3 + px) {
+			right: 55px;
+		}
+		@media (max-width: $md4 + px) {
+			right: 43px;
 		}
 	}
 	.slick-arrow.slick-next {
@@ -202,6 +240,15 @@
 		margin: 0px 15px;
 		max-width: 170px;
 		max-height: 90px;
+		@media (max-width: $md2 + px) {
+			margin: 0px 10px;
+		}
+		@media (max-width: 558px) {
+			margin: 0px 25px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 0px 13px;
+		}
 	}
 }
 //=======================================================================================================
