--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -54,13 +54,13 @@ body {
 	max-width: $mw + px;
 	margin: 0 auto;
 	width: 100%;
-	@media (max-width: $md1+px) {
+	@media (max-width: $md1 + px) {
 		max-width: 970px;
 	}
-	@media (max-width: $md2+px) {
+	@media (max-width: $md2 + px) {
 		max-width: 750px;
 	}
-	@media (max-width: $md3+px) {
+	@media (max-width: $md3 + px) {
 		max-width: none;
 		padding: 0 10px;
 	}
@@ -84,6 +84,12 @@ body {
 	&__services {
 		margin: 55px 0px 0px 0px;
 		padding: 0px 0px 50px 0px;
+		@media (max-width: $md2 + px) {
+			padding-bottom: 25px;
+		}
+		@media (max-width: $md3 + px) {
+			padding-bottom: 15px;
+		}
 	}
 	&__services-info {
 		margin: 0px 0px 50px 0px;
@@ -92,23 +98,65 @@ body {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		@media (max-width: $md2 + px) {
+			padding: 20px;
+			margin: 0px 0px 40px 0px;
+		}
+		@media (max-width: $md3 + px) {
+			flex-direction: column;
+			margin: 0px 0px 30px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			padding: 10px 15px 15px 15px;
+			margin: 0px 0px 20px 0px;
+		}
 	}
 	&__services-items {
 		display: flex;
 		margin: 0 -15px;
+		@media (max-width: 1183px) and (min-width: $md2 + px) {
+			margin: 0 -10px;
+		}
+		@media (max-width: $md2 + px) {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 	}
 	&__services-column {
 		flex: 0 1 25%;
 		padding: 0px 15px;
+		@media (max-width: 1183px) and (min-width: $md2 + px) {
+			padding: 0 10px;
+		}
+		@media (max-width: $md2 + px) {
+			flex: 0 1 33.3333%;
+			margin-bottom: 50px;
+		}
+		@media (max-width: $md3 + px) {
+			flex: 0 1 50%;
+		}
+		@media (max-width: $md4 + px) {
+			flex: 0 1 100%;
+			margin-bottom: 40px;
+		}
 	}
 	&__advantages {
 		padding: 54px 0px 0px 0px;
 		position: relative;
-		background: linear-gradient(180deg, #ececec 50%, #f3f3f3 50%);
+		background: linear-gradient(180deg, #ececec 30%, #f3f3f3 70%);
 		&:before {
 			content: url("../img/items/ruler_light.png");
 			position: absolute;
 			top: 0;
+		}
+		@media (max-width: $md2 + px) {
+			padding-top: 40px;
+		}
+		@media (max-width: $md3 + px) {
+			padding-top: 30px;
+		}
+		@media (max-width: $md4 + px) {
+			padding-top: 25px;
 		}
 	}
 	&__advantages-title {
@@ -118,6 +166,18 @@ body {
 		font-weight: 600;
 		color: #e1524b;
 		margin: 0px 0px 14px 0px;
+		@media (max-width: $md2 + px) {
+			font-size: 38px;
+		}
+		@media (max-width: $md3 + px) {
+			font-size: 34px;
+			margin: 0px 0px 10px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			font-size: 30px;
+			line-height: 35px;
+			margin: 0px 0px 5px 0px;
+		}
 	}
 	&__advantages-subtitle {
 		text-align: center;
@@ -125,6 +185,18 @@ body {
 		font-weight: 400;
 		color: #777777;
 		margin: 0px 0px 68px 0px;
+		@media (max-width: 1184px) {
+			margin-bottom: 40px;
+		}
+		@media (max-width: $md2 + px) {
+			margin-bottom: 20px;
+		}
+		@media (max-width: $md3 + px) {
+			margin-bottom: 30px;
+		}
+		@media (max-width: $md4 + px) {
+			margin-bottom: 30px;
+		}
 	}
 	&__advantages-screens {
 		display: grid;
@@ -133,21 +205,137 @@ body {
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
 		margin: 0px 0px 57px 0px;
+		text-align: center;
+		@media (max-width: 1184px) {
+			margin: 0px 70px 57px 0px;
+		}
+		@media (max-width: $md2 + px) and (min-width: $md3 + px) {
+			margin: 0px 0px 40px -40px;
+		}
+		@media (max-width: $md3 + px) {
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-rows: 1fr 1fr;
+			gap: 0px 0px;
+			margin: 0px 0px 50px 0px;
+		}
+		@media (max-width: 640px) and (min-width: $md4 + px) {
+			margin: 0px 50px 10px 1px;
+		}
+		@media (max-width: 570px) and (min-width: $md4 + px) {
+			margin-bottom: -16px;
+		}
+		@media (max-width: $md4 + px) {
+			grid-auto-columns: 1fr;
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 1fr 1fr;
+			margin-bottom: -65px;
+		}
 		&-1 {
 			grid-area: 1 / 1 / 2 / 2;
 			margin-right: -80px;
 			margin-top: 59px;
 			z-index: 1;
+			@media (max-width: 1184px) {
+				img {
+					width: 80%;
+				}
+			}
+			@media (max-width: $md2 + px) and (min-width: $md3 + px) {
+				margin-right: -80px;
+				margin-top: 59px;
+				img {
+					width: 70%;
+				}
+			}
+			@media (max-width: $md3 + px) {
+				grid-area: 1 / 1 / 2 / 2;
+				margin-right: -163px;
+				margin-top: 0px;
+			}
+			@media (max-width: $md4 + px) {
+				grid-area: 1 / 1 / 2 / 2;
+				margin-right: 0px;
+				margin-left: 0;
+				margin-top: 0px;
+				img {
+					width: 80%;
+				}
+			}
 		}
 		&-2 {
 			grid-area: 1 / 2 / 2 / 3;
 			z-index: 3;
+			@media (max-width: 1184px) {
+				margin-left: -36px;
+				margin-right: 17px;
+				margin-top: 15px;
+				img {
+					width: 140%;
+				}
+			}
+			@media (max-width: $md2 + px) and (min-width: $md3 + px) {
+				margin-left: -18px;
+				margin-right: 0px;
+				margin-top: 25px;
+				img {
+					width: 125%;
+				}
+			}
+			@media (max-width: $md3 + px) {
+				grid-area: 2 / 1 / 3 / 3;
+				margin-right: 5px;
+				margin-left: 85px;
+				margin-top: -90px;
+			}
+			@media (max-width: 640px) and (min-width: $md4 + px) {
+				margin-right: -27px;
+				margin-left: 100px;
+				margin-top: -73px;
+			}
+			@media (max-width: $md4 + px) {
+				grid-area: 2 / 1 / 3 / 2;
+				margin-right: 0px;
+				margin-left: 0px;
+				margin-top: -66px;
+				img {
+					width: 100%;
+				}
+			}
 		}
 		&-3 {
 			grid-area: 1 / 3 / 2 / 4;
 			margin-left: -80px;
 			margin-top: 59px;
 			z-index: 2;
+			@media (max-width: 1184px) {
+				margin-left: 0px;
+				margin-right: -78px;
+				img {
+					width: 80%;
+				}
+			}
+			@media (max-width: $md2 + px) and (min-width: $md3 + px) {
+				margin-left: -35px;
+				margin-right: -48px;
+				img {
+					width: 70%;
+				}
+			}
+			@media (max-width: $md3 + px) {
+				grid-area: 1 / 2 / 2 / 3;
+				margin-right: -222px;
+				margin-left: 60px;
+				margin-top: 0px;
+			}
+			@media (max-width: $md4 + px) {
+				grid-area: 3 / 1 / 4 / 2;
+				margin-right: 0px;
+				margin-left: 0px;
+				margin-top: -100px;
+				img {
+					width: 80%;
+				}
+			}
 		}
 		img {
 			border-radius: 8px;
@@ -155,23 +343,43 @@ body {
 	}
 	&__advantages-info {
 		display: flex;
+		@media (max-width: $md3 + px) {
+			display: block;
+		}
 	}
 	&__clients {
 		padding: 65px 0px 50px 0px;
+		@media (max-width: 1184px) {
+			padding: 50px 0px 45px 0px;
+		}
+		@media (max-width: $md2 + px) {
+			padding: 30px 0px 45px 0px;
+		}
 	}
 	&__clients-header {
 		margin: 0px 0px 39px 0px;
 		display: flex;
 		align-items: center;
 		flex-direction: row;
+		min-width: 0;
 		* {
 			flex-shrink: 0;
+		}
+		@media (max-width: $md3 + px) {
+			margin: 0px 0px 25px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 0px 0px 15px 0px;
 		}
 	}
 }
 .info-services {
 	&__text {
 		max-width: 80%;
+		@media (max-width: $md3 + px) {
+			max-width: 100%;
+			text-align: center;
+		}
 	}
 	&__btn {
 		text-transform: uppercase;
@@ -184,10 +392,25 @@ body {
 		line-height: 1.2;
 		color: #7f8c8c;
 		margin: 0px 0px 7px 0px;
+		@media (max-width: $md2 + px) {
+			font-size: 26px;
+		}
+		@media (max-width: $md4 + px) {
+			font-size: 24px;
+		}
+		@media (max-width: 320px) {
+			font-size: 22px;
+		}
 	}
 	&__subtitle {
 		line-height: 1.62;
 		color: #777777;
+		@media (max-width: $md3 + px) {
+			margin-bottom: 15px;
+		}
+		@media (max-width: $md4 + px) {
+			margin-bottom: 10px;
+		}
 	}
 }
 .item-services {
@@ -209,6 +432,12 @@ body {
 			fill: #e6655e;
 		}
 	}
+	@media (max-width: $md2 + px) {
+		padding: 25px 14px 40px;
+	}
+	@media (max-width: $md3 + px) {
+		padding: 20px 14px 30px;
+	}
 	&__title {
 		text-transform: uppercase;
 		font-size: 16px;
@@ -216,6 +445,13 @@ body {
 		font-weight: 800;
 		color: #7f8c8c;
 		margin: 0px 0px 36px 0px;
+		@media (max-width: $md2 + px) {
+			margin: 0px 0px 30px 0px;
+		}
+		@media (max-width: $md3 + px) {
+			margin: 0px 0px 20px 0px;
+			font-size: 14px;
+		}
 	}
 	&__text {
 		line-height: 20px;
@@ -226,18 +462,42 @@ body {
 		position: absolute;
 		bottom: -25px;
 		right: 35px;
+		@media (max-width: 1183px) and (min-width: $md2 + px) {
+			right: 15px;
+		}
+		@media (max-width: $md2 + px) {
+			right: 40px;
+		}
+		@media (max-width: $md3 + px) and (min-width: 700px) {
+			right: 30%;
+		}
+		@media (max-width: 700px) and (min-width: 600px) {
+			right: 25%;
+		}
+		@media (max-width: 600px) and (min-width: 530px) {
+			right: 20%;
+		}
+		@media (max-width: 530px) and (min-width: $md4 + px) {
+			right: 15%;
+		}
+		@media (max-width: $md4 + px) {
+			right: 30%;
+			left: 30%;
+		}
+		@media (max-width: 330px) {
+			left: 25%;
+		}
 	}
 }
 //=======================================================================================================
-.info-advantages {
-	&__item {
-	}
-}
 .item-strengths {
 	width: 240px;
 	margin: 0px 70px 0px 0px;
 	&__title {
 		margin: 0px 0px 37px 0px;
+		@media (max-width: $md3 + px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 	&__text {
 	}
@@ -250,6 +510,21 @@ body {
 				margin-right: 10px;
 			}
 		}
+	}
+	@media (max-width: 1184px) {
+		margin: 0px 30px 0px 0px;
+	}
+	@media (max-width: $md2 + px) {
+		margin: 0px 40px 0px 0px;
+	}
+	@media (max-width: $md3 + px) {
+		width: 100%;
+		margin: 0px 0px 15px 0px;
+		text-align: center;
+	}
+	@media (max-width: $md4 + px) {
+		text-align: left;
+		margin: 0px 0px 10px 0px;
 	}
 }
 .item-charts {
@@ -264,18 +539,57 @@ body {
 			text-decoration: underline;
 			color: #e1524b;
 		}
+		@media (max-width: $md2 + px) {
+			margin: 0px 0px 20px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 	&__body {
 		display: flex;
+		@media (max-width: $md2 + px) {
+			flex-wrap: wrap;
+		}
+		@media (max-width: $md3 + px) {
+			flex-wrap: nowrap;
+		}
+		@media (max-width: $md4 + px) {
+			flex-wrap: wrap;
+		}
 	}
 	&__item {
 		margin: 0px 23px 0px 0px;
 		&:last-child {
 			margin: 0px 0px 0px 0px;
 		}
+		@media (max-width: $md2 + px) and (min-width: $md3 + px) {
+			width: 50%;
+			margin: 0px 0px 20px 0px;
+			&:last-child {
+				margin: 0px 0px 0px 0px;
+			}
+		}
+		@media (max-width: $md3 + px) {
+			width: 25%;
+			text-align: center;
+		}
+		@media (max-width: 570px) {
+			margin: 0px 0px 0px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			width: 50%;
+			margin: 0px 0px 20px 0px;
+		}
 	}
 	&__circle {
 		margin: 0px 0px 24px 0px;
+		@media (max-width: $md2 + px) {
+			margin: 0px 0px 10px 0px;
+		}
+		@media (max-width: $md4 + px) {
+			margin: 0px 0px 5px 0px;
+		}
 	}
 	&__title {
 		font-size: 16px;
@@ -283,12 +597,28 @@ body {
 		font-weight: 800;
 		color: #7f8c8c;
 		text-align: center;
+		@media (max-width: $md4 + px) {
+			font-size: 14px;
+		}
+	}
+	@media (max-width: $md2 + px) {
+		width: 350px;
+	}
+	@media (max-width: $md3 + px) {
+		width: 100%;
+		margin: 0px 0px 30px 0px;
+	}
+	@media (max-width: $md4 + px) {
+		margin: 0px 0px 10px 0px;
 	}
 }
 .item-review {
 	width: 270px;
 	&__title {
 		margin: 0px 0px 23px 0px;
+		@media (max-width: $md3 + px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 	&__text {
 		line-height: 24px;
@@ -311,6 +641,16 @@ body {
 			width: 0;
 			height: 0;
 			transform: rotate(180deg);
+			@media (max-width: $md3 + px) {
+				bottom: -30px;
+				border: 15px solid transparent;
+				border-left: 15px solid #f8f8f8;
+				border-bottom: 15px solid #f8f8f8;
+			}
+		}
+		@media (max-width: $md3 + px) {
+			padding: 10px;
+			line-height: 22px;
 		}
 	}
 	&__author {
@@ -320,8 +660,16 @@ body {
 		color: #777777;
 		margin-top: 15px;
 		margin-left: 80px;
+		@media (max-width: $md3 + px) {
+			margin-top: 13px;
+			margin-left: 65px;
+		}
+	}
+	@media (max-width: $md3 + px) {
+		width: 100%;
 	}
 }
+
 //=======================================================================================================
 .header-clients {
 	&__title {
@@ -345,6 +693,12 @@ body {
 	}
 	&__btn {
 		width: 105px;
+		@media (max-width: $md3 + px) {
+			width: 95px;
+		}
+		@media (max-width: $md4 + px) {
+			width: 78px;
+		}
 	}
 }
 //</ОСНОВНОЙ БЛОК>=======================================================================================
